PyQuest/src/test/semantic_analysis/valid/test010.ql
// Compatible types for addition operation
form testForm {
	"First Question"
	someIdentifier : decimal = 10.0 + 10
}