PyQuest/src/test/semantic_analysis/invalid/test019.ql
// Incompatible types for division operation
form testForm {
	"First Question"
	someIdentifier : decimal = 10.0 / True
}